@@ -1,5 +1,12 @@
 [tox]
-envlist = pypy3,py36,py37,py38,py39
+envlist = pypy3,py36,py37,py38,py39,typing
 skipsdist = true
+
 [testenv]
 commands=python -m unittest {posargs}
+
+[testenv:typing]
+deps =
+    mypy==0.910
+commands =
+    mypy --strict {posargs: rstr}
